# cubeZero

./: .gitignore  .gitmodules  .nvimrc  CMakeLists.txt  client.py  compile_commands.json  fragment.shader  guidelines.txt  headlessServer.cpp  launch_test.sh  main.cpp  pythonCube.cpp  run.sh  server.cpp  vertex.shader
src/: CubeVertexInfo.hpp  Move.cpp  Move.hpp  OpenGL.cpp  OpenGL.hpp  Piece.cpp  Piece.hpp  PieceColors.hpp  Position.cpp  Position.hpp  Scene.hpp  controls.cpp  cube.cpp  cube.hpp  fragment.shader  puzzle.hpp  shader.cpp  shader.h  test.cpp  test.hpp  util.cpp  util.h
src/OpenGL/: OpenGL.cpp  OpenGLMock.cpp
tests/: Move.test.cpp  Piece.test.cpp  PieceColors.test.cpp  Position.test.cpp  Puzzle.test.cpp  test.cpp
